<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="12dp"
    android:background="@color/list_item_color_background">
    <TextView
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:id="@+id/itemNameTV"
        android:padding="12dp"
        android:text="@string/text_name_item_TV"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/itemIconDeleteIV"
        />
    <TextView
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:id="@+id/itemLastNameTV"
        android:padding="12dp"
        android:text="@string/text_lastName_item_TV"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemNameTV"
        app:layout_constraintRight_toLeftOf="@id/itemIconDeleteIV"
        />
    <TextView
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:id="@+id/itemPhoneTV"
        android:padding="12dp"
        android:text="@string/text_phone_item_TV"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemLastNameTV"
        app:layout_constraintRight_toLeftOf="@id/itemTimesTampTV"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itemIconDeleteIV"
        android:padding="@dimen/_16dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@id/itemNameTV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/itemNameTV"/>
    <TextView
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:id="@+id/itemTimesTampTV"
        android:padding="@dimen/_12dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        android:text="@string/text_time_item_TV"
        app:layout_constraintBottom_toBottomOf="@id/itemPhoneTV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/itemPhoneTV"
        />



</androidx.constraintlayout.widget.ConstraintLayout>